--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,11 @@ future==0.18.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.5
+pandas==1.2.0
 plotly==4.14.3
+python-dateutil==2.8.1
+pytz==2020.5
 retrying==1.3.3
 six==1.15.0
 Werkzeug==1.0.1
