--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Brotli==1.0.9
 click==7.1.2
+cycler==0.10.0
 dash==1.19.0
+dash-bootstrap-components==0.11.1
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash-renderer==1.9.0
@@ -11,12 +13,19 @@ future==0.18.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.3.4
 numpy==1.19.5
 pandas==1.1.4
+Pillow==8.1.0
 plotly==4.14.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.5
 retrying==1.3.3
+scipy==1.6.0
+seaborn==0.11.1
 six==1.15.0
+SQLAlchemy==1.3.23
 Werkzeug==1.0.1
